# 3aw

./: Dockerfile  README.md  manage.py  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_rule_instances_delete_instance.py  0003_policy_delete_rule.py  0004_alter_policy_options_and_more.py
fontionnalité /: graph_fonctionnalités
waf/: asgi.py  settings.py  urls.py  wsgi.py
